--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>0.1-Test</version>
     <packaging>war</packaging>
 
-    <name>LogInSample</name>
+    <name>LegoHouse</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
